# django-app

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/: log.txt
mysite/blogapp/: models.py  sitemap.py  urls.py  views.py
mysite/blogapp/management/commands/: create_article.py
mysite/blogapp/migrations/: 0001_initial.py  0002_category.py  0003_tag.py  0004_article.py  0005_alter_article_pub_date.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html  base.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/myauth/: models.py  tests.py  urls.py  views.py
mysite/myauth/management/commands/: bind_user.py
mysite/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
mysite/myauth/templates/myauth/: about-me.html  user-detail.html  users-list.html
mysite/mysite/: settings.py  sitemaps.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  views.py
mysite/requestdataapp/templates/requestdataapp/: file-upload.html  request-query-params.html  user-bio-form.html
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  sitemap.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: orders-fixture.json  products-fixture.json  users_fixture.json
mysite/shopapp/management/commands/: agg.py  bulk_actions.py  create_order.py  update_order.py  (+1 more)
mysite/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options.py  0008_alter_product_discount.py  0009_product_created_by.py  0010_alter_product_created_by.py  0011_remove_product_created_by.py  0012_order_receipt.py  0013_product_preview.py  0014_productimage.py  0015_alter_order_options_alter_product_options.py  0016_alter_product_description_alter_product_name.py
(+14 files in other folders)
