[tool.poetry]
name = "prod"
version = "0.1.0"
description = ""
authors = ["Awooka <Monamrazb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "3.8.1"
attrs = "24.3.0"
backports-tarfile = "1.2.0"
build = "0.10.0"
cachecontrol = "0.12.14"
certifi = "2024.12.14"
charset-normalizer = "3.4.1"
cleo = "2.1.0"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.9"
django = "4.1.7"
django-debug-toolbar = "4.0.0"
django-filter = "22.1"
django-rest-framework = "0.1.0"
djangorestframework = "3.14.0"
docutils = "0.21.2"
drf-spectacular = "0.28.0"
dulwich = "0.21.7"
fastjsonschema = "2.21.1"
filelock = "3.16.1"
flake8 = "7.1.1"
flake8-docstrings = "1.7.0"
gunicorn = "23.0.0"
html5lib = "1.1"
idna = "3.10"
importlib-metadata = "8.5.0"
inflection = "0.5.1"
installer = "0.7.0"
jaraco-classes = "3.4.0"
jaraco-context = "6.0.1"
jaraco-functools = "4.1.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2024.10.1"
keyring = "23.13.1"
lockfile = "0.12.2"
mccabe = "0.7.0"
more-itertools = "10.6.0"
msgpack = "1.1.0"
packaging = "24.2"
pexpect = "4.9.0"
pillow = "11.0.0"
pkginfo = "1.12.0"
platformdirs = "2.6.2"
poetry = "1.4.2"
poetry-core = "1.5.2"
poetry-plugin-export = "1.3.1"
ptyprocess = "0.7.0"
pycodestyle = "2.12.1"
pydocstyle = "6.3.0"
pyflakes = "3.2.0"
pyproject-hooks = "1.2.0"
pytz = "2024.2"
pywin32-ctypes = "0.2.3"
pyyaml = "6.0.2"
rapidfuzz = "3.11.0"
referencing = "0.35.1"
requests = "2.32.3"
requests-toolbelt = "0.10.1"
rpds-py = "0.22.3"
shellingham = "1.5.4"
six = "1.17.0"
snowballstemmer = "2.2.0"
sqlparse = "0.4.2"
tomlkit = "0.13.2"
trove-classifiers = "2025.1.10.15"
tzdata = "2024.2"
uritemplate = "4.1.1"
urllib3 = "1.26.20"
virtualenv = "20.21.1"
webencodings = "0.5.1"
zipp = "3.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
